kubernetes/dockertest-deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myapp
  labels:
    name: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
  namespace: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: dockertest
        image: hub.hnrx.de:32769/matthias/dockertest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
