kubernetes/dockertest-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapp-service
  namespace: myapp
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 5000
  type: NodePort
