kubernetes/dockertest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.hnrx.de
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-service
          servicePort: 5000
